smaller github link, added zzsuite badge

--- a/index.html
+++ b/index.html
@@ -56,8 +56,14 @@
 			</div>
 			<div class="col-md-6 order-2 order-md-1">
 				<span id="readme"></span>
-				<a class="btn btn-secondary external-link mt-3" href="https://github.com/zkillboard/podmail"
-					target="_blank"> GitHub </a>
+				<div class="mt-3">
+					<a href="https://github.com/zkillboard/podmail" target="_blank" class="external-link">
+						<img src="/img/github.svg?v=--hash--" alt="GitHub" style="height: 24px; vertical-align: middle;">
+					</a>
+					<a href="https://zzeve.com" target="_blank" class="external-link ms-2">
+						<img src="https://img.shields.io/badge/zz-Suite-blueviolet?style=flat-square" alt="Part of zz Suite" style="vertical-align: middle;">
+					</a>
+				</div>
 			</div>
 		</div>
 		<div id="podmail" class="d-flex flex-row d-none">
@@ -76,9 +82,13 @@
 					<div id="folders" class="flex-fill"></div>
 					<hr />
 					<div id="info" class="d-flex flex-row justify-content-center align-items-center mb-2">
-						<div class="flex-fill d-flex justify-content-left">
-							<a class="btn btn-info external-link" href="https://github.com/zkillboard/podmail"
-								target="_blank">GitHub</a>
+						<div class="flex-fill d-flex justify-content-left align-items-center">
+							<a href="https://github.com/zkillboard/podmail" target="_blank" class="external-link">
+								<img src="/img/github.svg?v=--hash--" alt="GitHub" style="height: 20px;">
+							</a>
+							<a href="https://zzeve.com" target="_blank" class="external-link ms-2">
+								<img src="https://img.shields.io/badge/zz-Suite-blueviolet?style=flat-square" alt="Part of zz Suite" style="height: 18px;">
+							</a>
 						</div>
 						<div style="font-size:80%; text-align: right;">
 							<span id="utcClock"></span><br />
