--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<span class="m-auto"></span>
 					<span>
 						<button id="btn_login" class="btn btn-default btn-bind">
-							<img src="/img/ssologin.png" alt="Log in with EVE Online" />
+							<img src="/img/ssologin.png?v=--hash--" alt="Log in with EVE Online" />
 						</button>
 					</span>
 				</div>
@@ -69,7 +69,7 @@
 		<div id="podmail" class="d-flex flex-row d-none">
 			<div class="xs-hideit d-flex flex-column vh-100" id="leftpanel">
 				<div class="d-flex"><span><a id='podmailLink' href='/?v=--hash--'><img id="sitelogo"
-								src="/img/podmail.png" title="PodMail"></a></span><span>
+								src="/img/podmail.png?v=--hash--" title="PodMail"></a></span><span>
 						<h4>PodMail</h4>
 					</span>
 					<div class="m-auto"></div>
@@ -111,7 +111,7 @@
 							<div class="dropdown">
 								<button class="btn dropdown-toggle pt-0 pb-0" type="button" data-bs-toggle="dropdown"
 									data-bs-offset="0, -1" aria-expanded="false">
-									<img id="charimg" src="/img/character.jpg"></button>
+									<img id="charimg" src="/img/character.jpg?v=--hash--"></button>
 								<ul id="maindropdownmenu" class="dropdown-menu m-0 p-0">
 									<li class="dropdown-item no-propagate" id="show_names">
 										<label for="show_names_checkbox" class="dropdown-item-text">
