some tweaks, slow down on fetches too

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 					<div id="info" class="d-flex flex-row justify-content-center align-items-center mb-2">
 						<div class="flex-fill d-flex justify-content-left align-items-center">
 							<a href="https://github.com/zkillboard/podmail" target="_blank" class="external-link">
-								<img src="/img/github.svg?v=--hash--" alt="GitHub" style="height: 20px;">
-							</a>
+								<img src="/img/github.svg?v=--hash--" alt="GitHub" style="height: 20px;"></a>
 							<a href="https://zzeve.com" target="_blank" class="external-link ms-2">
 								<img src="https://img.shields.io/badge/zz-Suite-blueviolet?style=flat-square" alt="Part of zz Suite" style="height: 18px;">
 							</a>
