--- a/auth.html
+++ b/auth.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/app.css">
+	<link rel="stylesheet" href="/css/app.css?v=--hash--">
 </head>
 
 <body class="dark" id="body">
@@ -15,8 +15,9 @@
 	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
-	<script defer="" src="/js/SimpleESI.js"></script>
-	<script defer="" src="/js/esi.js"></script>
+	<script defer="" src="/js/KeyValues.js?v=--hash--" type="module"></script>
+	<script defer="" src="/js/SimpleESI.js?v=--hash--"></script>
+	<script defer="" src="/js/esi.js?v=--hash--"></script>
 </body>
 
 </html>
