--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.7/purify.min.js"
 		integrity="sha512-78KH17QLT5e55GJqP76vutp1D2iAoy06WcYBXB6iBCsmO6wWzx0Qdg8EDpm8mKXv68BcvHOyeeP4wxAL0twJGQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script defer="" src="/js/KeyValues.js?v=--hash--" type="module"></script>
 	<script defer="" src="/js/SimpleESI.js?v=--hash--"></script>
 	<script defer="" src="/js/esi.js?v=--hash--"></script>
 	<script defer="" src="/js/app.js?v=--hash--"></script>
